[package]
name = "a8mini-camera-rs"
version = "0.1.0"
edition = "2021"
description = "This project is a Rust port of A8mini-gimbal-camera-control (C version) originally created by thiagolages."
license = "MIT"
repository = "https://github.com/PurdueAerialRoboticsTeam/A8mini-camera-rs"
readme = "README.md"
keywords = ["rust", "siyi", "a8mini", "gimbal", "camera"]

[dependencies]
bincode = "1.3"
bytes = "1"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
